Kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/component: application-server
spec:
  ports:
  - name: $(PORT_NAME)
    port: $(PORT)
    protocol: $(PROTOCOL)
    targetPort: $(PORT_NAME)
