Kubernetes/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-world
spec:
  egress:
  - to:
    - podSelector:
        matchLabels: {}
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
